gnome-settings-daemon (3.34.2-2) UNRELEASED; urgency=medium

  * debian/control.in: Bump Standards-Version to 4.5.0 (no further changes)
  * Install the daemons in /usr/libexec now that's it's allowed in the policy

 -- Laurent Bigonville <bigon@debian.org>  Mon, 10 Feb 2020 13:56:27 +0100

gnome-settings-daemon (3.34.2-1) unstable; urgency=medium

  * Team upload
  * New upstream release
    - Depend on libgnome-desktop-3-dev (>= 3.34.2), to put
      media-key-launched programs in a systemd scope if running under
      systemd
  * Bump Standards-Version to 4.4.1
  * Swap libpam-systemd dependencies to default-logind | logind.
    Thanks to Mark Hindley (Closes: #925335)
    - While changing this line anyway, also swap from
      negative architecture qualifier [!hurd-any !kfreebsd-any]
      to positive architecture qualifier [linux-any]
  * Build-depend on libglib2.0-dev:native for gsd-power-enums-update,
    which is built and run on the build architecture when cross-compiling.
    Thanks to Helmut Grohne (Closes: #916551)
  * Build-depend on debhelper-compat (= 12) instead of using debian/compat

 -- Simon McVittie <smcv@debian.org>  Mon, 30 Dec 2019 15:44:01 +0000

gnome-settings-daemon (3.34.1-1) unstable; urgency=medium

  * New upstream bugfix release
    + Media-keys:
      - Update to OSD DBus API changes for keyboard brightness
    + Smartcards:
      - Use correct parent type for structs
      - Change manager to non-blocking
    + Power:
      - Fix rounding of brightness value
  * Drop GsdSmartcardService patch: applied in new release
  * Build-Depend on dh-sequence-gnome instead of gnome-pkg-tools

 -- Jeremy Bicha <jbicha@debian.org>  Sat, 12 Oct 2019 14:26:23 -0400

gnome-settings-daemon (3.34.0-3) unstable; urgency=medium

  * Team upload.
  * Upload to unstable

 -- Andreas Henriksson <andreas@fatal.se>  Mon, 30 Sep 2019 17:18:07 +0200

gnome-settings-daemon (3.34.0-2) experimental; urgency=medium

  * Team upload