@@ -44,7 +44,7 @@ Build-Depends: debhelper-compat (= 12),
                policykit-1,
                python3-dbusmock <!nocheck>,
                python3-gi <!nocheck>,
-               systemd,
+               systemd [linux-any],
                udev [linux-any] <!nocheck>,
                xauth <!nocheck>,
                xkb-data,
