@@ -11,7 +11,8 @@ ifneq ($(DEB_HOST_ARCH_OS),linux)
 CONFFLAGS = \
 	-Drfkill=false \
 	-Dnetwork_manager=false \
-	-Dalsa=false
+	-Dalsa=false \
+	-Dsystemd=false
 endif
 
 override_dh_auto_configure:
