@@ -2,8 +2,10 @@ gnome-settings-daemon (3.34.2-2) UNRELEASED; urgency=medium
 
   * debian/control.in: Bump Standards-Version to 4.5.0 (no further changes)
   * Install the daemons in /usr/libexec now that's it's allowed in the policy
+  * Disable systemd support on non-linux architectures, this should only be
+    used to detect the path for the user .service/.target files
 
- -- Laurent Bigonville <bigon@debian.org>  Mon, 10 Feb 2020 13:56:27 +0100
+ -- Laurent Bigonville <bigon@debian.org>  Mon, 10 Feb 2020 14:31:59 +0100
 
 gnome-settings-daemon (3.34.2-1) unstable; urgency=medium
 
